# eagle-watcher

./: "是潘哆啦呀"素材管家 - 开发方案.md  .coverage  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ai_tagger.py  analyzer.py  cli.py  config.py  config.yaml.example  eagle_api.py  knowledge.py  main.py  menu_app.py  notifier.py  pyproject.toml  server.py  test_watchdog.py  themes.yaml  watcher.py  优化方案.md  使用手册.md
.github/workflows/: ci.yml
docs/: api.md  architecture.md  development.md
services/: file_watcher.py  sort_service.py  state_manager.py
src/eagle_watcher/: __init__.py  _constants.py  _logging.py  ai_tagger.py  analyzer.py  cli.py  config.py  eagle_api.py  exceptions.py  exporter.py  keychain.py  knowledge.py  main.py  menu_app.py  notifier.py  server.py  watcher.py
src/eagle_watcher/pyui/: __init__.py  panel.html  panel.py  server.py
src/eagle_watcher/server/: __init__.py  _common.py  base.py  panel.py  remote.py
src/eagle_watcher/services/: __init__.py  file_watcher.py  history.py  sort_service.py  state_manager.py
tests/: conftest.py  test_ai_tagger.py  test_analyzer.py  test_config.py  test_eagle_api.py  test_exceptions.py  test_exporter.py  test_knowledge.py  test_modules.py  test_pyui_server.py  test_state_manager.py  test_watcher.py
