[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "eagle-watcher"
version = "0.4.0"
description = "macOS 素材管家 — 自动监控 Downloads 文件夹，智能分类入库到 Eagle"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Eagle Watcher Team"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X :: Cocoa",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "pyyaml>=6.0",
    "dashscope>=1.0",
]

[project.optional-dependencies]
# macOS 文件原生监控（无此依赖自动降级为 inode 轮询）
fsevents = ["pyobjc-framework-FSEvents>=10.0"]
# macOS 菜单栏 + HUD 浮动面板
ui = [
    "rumps>=0.4.0",
    "pyobjc-framework-WebKit>=10.0",
]
# 完整安装（macOS 推荐）
full = [
    "eagle-watcher[fsevents]",
    "eagle-watcher[ui]",
]
# 开发测试
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/yiwenxu123/eagle-watcher"
Repository = "https://github.com/yiwenxu123/eagle-watcher"

[project.scripts]
eagle-watcher = "eagle_watcher.main:main"
eagle-import = "eagle_watcher.cli:main"
eagle-server = "eagle_watcher.server:start_server"

[tool.setuptools.packages.find]
where = ["src"]
include = ["eagle_watcher*"]

[tool.pytest.ini_options]
testpaths = ["tests"]